unpackaged/main/default/objects/pse__Search_Resources_Personal__c/pse__Search_Resources_Personal__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains user/profile level settings for Search Resources</description>
    <label>Search Resources Personal</label>
</CustomObject>