unpackaged/main/default/objects/pse__Search_Resources_Personal__c/fields/pse__Default_Search_Logic_For_Skill__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Search_Logic_For_Skill__c</fullName>
    <defaultValue>"AND"</defaultValue>
    <description>The default search logic that is selected when searching for resources using the Competencies section of Search Resources. You can enter a value of OR or AND. The default value is AND.</description>
    <inlineHelpText>The default search logic that is selected when searching for resources using the Competencies section of Search Resources. You can enter a value of OR or AND. The default value is AND.</inlineHelpText>
    <label>Default Search Logic For Skill</label>
    <length>4</length>
    <type>Text</type>
</CustomField>