unpackaged/main/default/objects/pse__Search_Resources_Personal__c/fields/pse__Distance_Unit__c.field-meta.xml
<CustomField>
    <fullName>pse__Distance_Unit__c</fullName>
    <defaultValue>"km"</defaultValue>
    <description>The distance unit to be shown in Resource Search. Enter km for kilometers. Enter mile for miles. The default value is km.</description>
    <inlineHelpText>The distance unit to be shown in Resource Search. Enter km for kilometers. Enter mile for miles. The default value is km.</inlineHelpText>
    <label>Distance Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>