unpackaged/main/default/objects/pse__Search_Resources_Personal__c/fields/pse__Fields_to_List_in_Map_Push_Pin__c.field-meta.xml
<CustomField>
    <fullName>pse__Fields_to_List_in_Map_Push_Pin__c</fullName>
    <description>Comma separated list of fields to display on each push pin of the map that appears when you click Show Results on Map.</description>
    <inlineHelpText>Comma separated list of fields to display on each push pin of the map that appears when you click Show Results on Map.</inlineHelpText>
    <label>Fields to List in Map Push Pin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>