unpackaged/main/default/objects/pse__Search_Resources_Personal__c/fields/pse__Max_Columns_Allowed_in_Result_Section__c.field-meta.xml
<CustomField>
    <fullName>pse__Max_Columns_Allowed_in_Result_Section__c</fullName>
    <description>Defines the maximum number of fields from the SearchResourcesResultFields field set to be displayed in a single row within a search result on the Search Resources page. The default value of 6 is used if the value is null or zero.</description>
    <inlineHelpText>Defines the maximum number of fields from the SearchResourcesResultFields field set to be displayed in a single row within a search result on the Search Resources page. The default value of 6 is used if the value is null or zero.</inlineHelpText>
    <label>Max Columns Allowed in Result Section</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>