unpackaged/main/default/objects/pse__Search_Resources_Personal__c/fields/pse__Maximum_Resources__c.field-meta.xml
<CustomField>
    <fullName>pse__Maximum_Resources__c</fullName>
    <description>Maximum number of resources to be displayed. Set this value no higher than 500.</description>
    <inlineHelpText>Maximum number of resources to be displayed. Set this value no higher than 500.</inlineHelpText>
    <label>Maximum Resources</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>