unpackaged/main/default/objects/pse__Search_Resources_Personal__c/fields/pse__Number_of_Allowed_Push_Pins_on_Map__c.field-meta.xml
<CustomField>
    <fullName>pse__Number_of_Allowed_Push_Pins_on_Map__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Maximum number of push pins to be displayed on the map when you click Show Results on Map. Multiple push pins that share the same location are combined and displayed in one push pin. The default value is 5.</description>
    <inlineHelpText>Maximum number of push pins to be displayed on the map when you click Show Results on Map. Multiple push pins that share the same location are combined and displayed in one push pin. The default value is 5.</inlineHelpText>
    <label>Number of Allowed Push Pins on Map</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>