unpackaged/main/default/objects/pse__Search_Resources_Personal__c/fields/pse__Page_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Page_Size__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Maximum number of records to display on a single page of search results in Search Resources. The default value is 5.</description>
    <inlineHelpText>Maximum number of records to display on a single page of search results in Search Resources. The default value is 5.</inlineHelpText>
    <label>Page Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>