unpackaged/main/default/objects/pse__Search_Resources_Personal__c/fields/pse__Show_Latitude_Longitude_Fields__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Latitude_Longitude_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, latitude and longitude fields are shown when Search Resources is launched from the sidebar link or all tabs. The default value is false.</description>
    <inlineHelpText>When true, latitude and longitude fields are shown when Search Resources is launched from the sidebar link or all tabs. The default value is false.</inlineHelpText>
    <label>Show Latitude Longitude Fields</label>
    <type>Checkbox</type>
</CustomField>